refactor: add more logs and use the new String api of JDK