@@ -17,6 +17,7 @@ import com.netflix.graphql.dgs.InputArgument;
 import com.netflix.graphql.dgs.exceptions.DgsBadRequestException;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
+import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -32,6 +33,7 @@ import static com.hohomalls.core.enumeration.Role.*;
  * @author ricky.shiyouping@gmail.com
  * @since 29/5/2021
  */
+@Slf4j
 @DgsComponent
 @RequiredArgsConstructor
 public class UserDataFetcher {
@@ -47,6 +49,10 @@ public class UserDataFetcher {
   public Mono<Void> changePassword(
       @RequestHeader String authorization,
       @InputArgument("password") ChangePasswordDto changePasswordDto) {
+
+    UserDataFetcher.log.info(
+        "Received a request to change the password. Authorization={}", authorization);
+
     if (changePasswordDto.getAfter().equals(changePasswordDto.getBefore())) {
       return Mono.error(new DgsBadRequestException("Password doesn't change"));
     }
@@ -59,6 +65,9 @@ public class UserDataFetcher {
   @DgsQuery
   @HasAnyRoles({ROLE_BUYER, ROLE_SELLER})
   public Mono<UserDto> findUser(@RequestHeader String authorization) {
+    UserDataFetcher.log.info(
+        "Received a request to find the user. Authorization={}", authorization);
+
     var email = this.tokenService.getEmailFromAuth(authorization);
     return this.userService
         .findByEmail(email.get())
@@ -68,6 +77,8 @@ public class UserDataFetcher {
   @DgsMutation
   @HasAnyRoles(ROLE_ANONYMOUS)
   public Mono<String> signIn(@InputArgument("credentials") CredentialsDto credentialsDto) {
+    UserDataFetcher.log.info("Received a request to sign in. Email={}", credentialsDto.getEmail());
+
     return this.userService
         .findByEmail(credentialsDto.getEmail())
         .switchIfEmpty(Mono.error(new DgsBadRequestException("Invalid credentials")))
@@ -84,6 +95,8 @@ public class UserDataFetcher {
   @DgsMutation
   @HasAnyRoles({ROLE_SELLER, ROLE_BUYER})
   public Mono<Void> signOut(@RequestHeader String authorization) {
+    UserDataFetcher.log.info("Received a request to sign out. Authorization={}", authorization);
+
     var token = HttpHeaderUtil.getAuth(authorization);
     return this.sessionService.delete(token.get()).then();
   }
@@ -92,6 +105,8 @@ public class UserDataFetcher {
   @DgsMutation
   @HasAnyRoles(ROLE_ANONYMOUS)
   public Mono<String> signUp(@InputArgument("user") CreateUserDto createUserDto) {
+    UserDataFetcher.log.info("Received a request to sign up. Email={}", createUserDto.getEmail());
+
     var roles = createUserDto.getRoles();
     if (!roles.contains(Role.ROLE_BUYER)) {
       // Every new user has the buyer role
@@ -101,7 +116,7 @@ public class UserDataFetcher {
     if (this.userService.findByEmail(createUserDto.getEmail()).toFuture().get() != null) {
       return Mono.error(
           new DgsBadRequestException(
-              String.format("Email %s was already registered", createUserDto.getEmail())));
+              "Email %s was already registered".formatted(createUserDto.getEmail())));
     }
 
     return this.userService.save(this.userMapper.toDoc(createUserDto)).flatMap(this::createSession);
@@ -111,6 +126,8 @@ public class UserDataFetcher {
   @HasAnyRoles({ROLE_SELLER, ROLE_BUYER})
   public Mono<UserDto> updateUser(
       @RequestHeader String authorization, @InputArgument("user") UpdateUserDto updateUserDto) {
+    UserDataFetcher.log.info("Received a request to update user. Authorization={}", authorization);
+
     var email = this.tokenService.getEmailFromAuth(authorization);
     return this.userService
         .findByEmail(email.get())
